# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import loteriasRouter from "./loterias";
 import megaSenaRouter from "./mega-sena";
+import lotofacilRouter from "./lotofacil";
 import adminRouter from "./admin";
 
 const router: IRouter = Router();
@@ -9,6 +10,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(loteriasRouter);
 router.use(megaSenaRouter);
+router.use(lotofacilRouter);
 router.use(adminRouter);
 
 export default router;
